--- a/.github/workflows/buildModel.yaml
+++ b/.github/workflows/buildModel.yaml
@@ -25,4 +25,4 @@ jobs:
         run: npm install
 
       - name: Run Merge Script
-        run: node .src/buildModel.js
+        run: node ./src/buildModel.js
