--- a/package.json
+++ b/package.json
@@ -1,9 +1,5 @@
 {
   "name": "your-package-name",
   "version": "1.0.0",
-  "main": "buildModel.js",
-  "type": "module",
-  "scripts": {
-    "start": "node buildModel.js"
-  }
+  "type": "module"
 }
