--- a/.github/workflows/buildModel.yaml
+++ b/.github/workflows/buildModel.yaml
@@ -27,13 +27,25 @@ jobs:
       - name: Run Merge Script
         run: node ./src/buildModel.js
 
+      - name: Install dependenciess  
+        run: npm i @nlpjs/lang-en
+      - name: Install dependenciess  
+        run: npm i @nlpjs/nlp
+      - name: Install dependenciess     
+        run: npm i @nlpjs/core
+      - name: Install dependenciess     
+        run: npm install node-nlp
+
       - name: Run Merge Script
         run: node ./src/classifier.js
+
+
 
       - name: Commit Changes
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add -A
+          git add -u
+          git reset -- node_modules
           git commit -m "Auto-commit changes after running merge script"
           git push
