--- a/.github/workflows/buildModel.yaml
+++ b/.github/workflows/buildModel.yaml
@@ -33,7 +33,7 @@ jobs:
       - name: Install dependenciess     
         run: npm install node-nlp 
       - name: Install dependenciess     
-        run: npm i compress-json 
+        run: npm i lz-string
       - name: Install dependenciess     
         run: npm install unidecode
       - name: Run Merge Script
